fixed alignment, circle icons

--- a/ReactTest_GettingStarted/style.css
+++ b/ReactTest_GettingStarted/style.css
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Lobster|Open+Sans';
+
 body {
     font-size: .72em;
     background: white;
@@ -29,13 +30,13 @@ h4 {
 }
 
 .fRight {
-    float: right;
+    float:right;
     margin-right: 10px;
 }
 
 .divCenter {
     text-align: left;
-    padding: 2em;
+    padding: 2.2em;
 }
 
 .centered {
@@ -44,12 +45,12 @@ h4 {
 
 .box {
     display: inline-block;
-    width: 92%;
+    width: 285px;
     margin: auto;
 }
 
 img {
-    border-radius: 1em;
+    border-radius: 4em;
     border: 3px solid #FDFEFD;
 }
 
